Update for the newer django

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Django==1.9.4
+Django
 djangorestframework
 markdown
 django-filter
 Pillow
-python-resize-image==1.1.10
+python-resize-image==1.1.18
 django-boto==0.3.9
 django-storages==1.1.8
 celery==3.1.20
